fixed spacing in top menu

--- a/assets/scss/_main-menu.scss
+++ b/assets/scss/_main-menu.scss
@@ -9,8 +9,12 @@
     align-items: center;
     justify-content: flex-start;
     > li {
-      margin-right: 10px;
+      margin-right: 20px;
+      > button {
+        vertical-align: middle;
+      }
       > a {
+        vertical-align: middle;
         display: inline-block;
         text-decoration: none;
         &:hover {
